# ghost-api

./: .cargoignore  .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  worklog.md
.cargo/: config.toml
config/: ghost.toml
config/manifests/: go-client.json  node-agent.json  py-stealth.json
crates/ghost-adapters/threads-adapter/: Cargo.toml
crates/ghost-adapters/threads-adapter/src/: adapter.rs  lib.rs  official.rs  parser.rs  relay.rs  scraper_parser.rs  types.rs
crates/ghost-adapters/x-adapter/: Cargo.toml
crates/ghost-adapters/x-adapter/src/: adapter.rs  graphql.rs  lib.rs  parser.rs  selectors.rs  types.rs
crates/ghost-bridge/: Cargo.toml
crates/ghost-bridge/src/: bridge.rs  error.rs  lib.rs  nodejs.rs  protocol.rs  python.rs  worker.rs
crates/ghost-core/: Cargo.toml
crates/ghost-core/src/: config.rs  events.rs  fallback.rs  ghost.rs  health.rs  lib.rs  mock.rs  router.rs  worker.rs
crates/ghost-core/tests/: core_tests.rs
crates/ghost-schema/: Cargo.toml
crates/ghost-schema/src/: adapter.rs  adapter_types.rs  bridge.rs  capability.rs  config.rs  error.rs  event.rs  fallback.rs  lib.rs  manifest.rs  mapping.rs  mock.rs  platform.rs  server.rs  types.rs  vault.rs  worker.rs
crates/ghost-schema/tests/: schema_tests.rs
crates/ghost-server/: Cargo.toml
crates/ghost-server/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  routes.rs
crates/ghost-vault/: Cargo.toml
crates/ghost-vault/src/: credential.rs  injection.rs  lib.rs  proxy.rs  session.rs  vault.rs
crates/ghost-vault/tests/: vault_tests.rs
docs/: 1.plan.md  2.plan.md  2.progress.md  ghost-mapping.md  model-comparison.md  test-plan.md
scrapers/go-client/: go.mod  main.go
scrapers/node-agent/: package.json
scrapers/node-agent/src/: index.ts
scrapers/py-stealth/: pyproject.toml
scrapers/py-stealth/src/py_stealth/: __init__.py
scrapers/py-threads/: README.md  manifest.json  pyproject.toml  requirements.txt
scrapers/py-threads/src/py_threads/: __init__.py  py.typed  worker.py
scrapers/py-threads/tests/: conftest.py  test_worker.py
scripts/: check-polyglots.sh  install-go.sh  install-node.sh  install-polyglots.sh  install-python.sh  sync-polyglots.sh
