[workspace]
resolver = "2"
members = [
    "crates/ghost-core",
    "crates/ghost-schema",
    "crates/ghost-bridge",
    "crates/ghost-vault",
    "crates/ghost-server",
    "crates/ghost-adapters/x-adapter",
    "crates/ghost-adapters/threads-adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Ghost API Contributors"]
license = "MIT"
repository = "https://github.com/your-org/ghost-api"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP & Web
axum = "0.7"
tower = { version = "0.4", features = ["limit", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

# Tracing & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Parsing
toml = "0.8"

# FFI bridges
pyo3 = { version = "0.20", features = ["auto-initialize"] }
napi = { version = "2.14", features = ["async"] }
napi-derive = "2.14"

# Internal crates
ghost-core = { path = "crates/ghost-core" }
ghost-schema = { path = "crates/ghost-schema" }
ghost-bridge = { path = "crates/ghost-bridge" }
ghost-vault = { path = "crates/ghost-vault" }
x-adapter = { path = "crates/ghost-adapters/x-adapter" }
threads-adapter = { path = "crates/ghost-adapters/threads-adapter" }

# =========================
# Build Profiles
# =========================
# These settings apply to all workspace members
# and help reduce build storage footprint

[profile.dev]
debug = "line-tables-only"
codegen-units = 256
opt-level = 0

# Optimize dependencies even in dev mode for better runtime performance
# This reduces the need for separate release builds during development
[profile.dev.package."*"]
opt-level = 2

[profile.test]
debug = "line-tables-only"
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = "none"
panic = "abort"

# =========================
# Patch Section
# =========================
# Use to override dependencies with local versions or patches
# [patch.crates-io]
