[package]
name = "ghost-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Optional Axum + Utoipa HTTP server for ghost-api"

[[bin]]
name = "ghost-server"
path = "src/main.rs"

[dependencies]
# Internal crates
ghost-core = { path = "../ghost-core" }
ghost-schema = { path = "../ghost-schema" }
ghost-vault = { path = "../ghost-vault" }

# Async runtime
tokio = { workspace = true, features = ["full", "signal"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing & observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP & API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]

[features]
default = []
