[package]
name = "ghost-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Proxy & Credential injection logic for ghost-api"

[dependencies]
ghost-schema = { path = "../ghost-schema" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
vault-aws = []
vault-hashicorp = []
vault-gcp = []
vault-azure = []
