[project]
name = "py-stealth"
version = "0.1.0"
description = "Python-based Playwright/Request scraper for ghost-api"
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
