[package]
name = "threads-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Threads (Meta) platform adapter for ghost-api"

[dependencies]
ghost-schema = { path = "../../ghost-schema" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
