[package]
name = "threads-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Threads (Meta) platform adapter for ghost-api"

[dependencies]
ghost-schema = { path = "../../ghost-schema" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# HTTP client for official API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { workspace = true }

# URL handling
url = "2.5"
base64 = "0.22"

# URL encoding
urlencoding = "2.1"

[features]
default = []
